fix(detailed pages): Make delete btns more visible on detail pages
update breakpoint, btn look and text and new hook

--- a/src/sass/_rename_header.scss
+++ b/src/sass/_rename_header.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     max-width: none;
 
-    @include large {
+    @include extra-large {
       align-items: center;
       flex-direction: row;
     }
